@@ -7,6 +7,7 @@ __pycache__/
 .idea/
 
 ### pbr
+build/
 dist/
 .eggs/
 icp2edd.egg-info/
