@@ -18,7 +18,7 @@ keywords =
 
 [entry_points]
 console_scripts =
-    pbr = pbr.cmd:main
+    icp2edd = icp2edd.__main__:main
 
 [files]
 packages =
